--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 .inner{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 200px 200px 200px;
+    grid-template-rows: 50px 50px 50px;
 }
 .img{
     width: 150px;
@@ -36,4 +36,8 @@ body{
 
 .btn:hover{
     background: green;
+}
+
+.usercard{
+    text-align: center;
 }
